# raptor

./: Cargo.toml  Dockerfile  README.md
crates/network/: Cargo.toml
crates/network/src/: lib.rs  udp_client.rs  udp_server.rs
crates/protocols/: Cargo.toml
crates/serialization/: Cargo.toml
crates/serialization/src/: decode.rs  encode.rs  error.rs  lib.rs  message.rs  serde_helper.rs
tests/: udp_tests.rs
