[package]
name = "raptor"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/network",
    "crates/serialization"
]

[dependencies]
serialization = { path = "crates/serialization" }
network = { path = "crates/network" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
futures = "0.3"